# wealth-back

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  Pipfile  Procfile  README.md  cdk.json  debug.py  infra.py  mypy.ini  pyproject.toml
.github/workflows/: codeql-analysis.yml  main.yml
config/: default.yaml  local.yaml  production.yaml  staging.yaml
infra/: database.py  server.py  vpc.py
tests/: conftest.py  factory.py  fixtures.py
tests/authentication/: factory.py  test_auth.py
tests/banking/: factory.py  test_banking.py
tests/custom_assets/: test_logic.py
tests/database/: factory.py
tests/integrations/exchangerateapi/: test_api.py
tests/integrations/tink/: factory.py  test_api.py  test_logic.py  test_views.py
wealth/: logging.py  main.py  routers.py  scripts.py
wealth/authentication/: __init__.py  models.py  openapi.py  views.py  wealth_jwt.py
wealth/banking/: types.py  views.py
wealth/core/: authentication.py  views.py
wealth/core/authentication/: __init__.py  models.py  passwords.py  views.py  wealth_jwt.py
wealth/custom_assets/: logic.py  scripts.py  types.py  views.py
wealth/database/: api.py  models.py
wealth/integrations/alphavantage/: api.py  exceptions.py  parameters.py  scripts.py  types.py
wealth/integrations/exchangeratesapi/: api.py  dependency.py  (+4 more)
wealth/parameters/: __init__.py  _environment.py  constants.py  env.py  general.py
wealth/stocks/: exceptions.py  logic.py  scripts.py  types.py  views.py
wealth/util/: base_api.py  conversion.py  exceptions.py  types.py  validators.py
(+8 files in other folders)
