[tool.black]
line-length=128

[tool.isort]
profile="black"
src_paths=["wealth", "tests"]
multi_line_output=3
line_length=128

[tool.pytest.ini_options]
testpaths = [ "test" ]

[tool.poetry]
name = "wealth-back"
version = "0.1.0"
description = ""
authors = ["Anton De Meester <antondemeester@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.2"
fastapi = "*"
uvicorn = "*"
requests = "*"
beanie = "*"
config2 = "*"
boto3 = "*"
fastapi-jwt-auth = "*"
bcrypt = "*"
httpx = "*"
pymongo = {extras = ["srv"], version = "*"}
python-dateutil = "*"
nest-asyncio = "*"
sentry-sdk = "*"
time-machine = "*"

[tool.poetry.dev-dependencies]
black = "*"
mypy = "*"
pytest = "*"
pylint = "*"
isort = "*"
pytest-cov = "*"
bpython = "*"
radon = "*"
pre-commit = "*"
pymongo-inmemory = "*"
pytest-asyncio = "*"
pytest-httpx = "*"
setupextras = "*"
types-python-dateutil = "*"
time-machine = "*"

[build-system]
requires = ["setuptools", "poetry_core>=1.0"]
build-backend = "poetry.core.masonry.api"
